hphp/hack/test/typecheck/refinements/nested_refine.php.exp
File "nested_refine.php", line 7, characters 29-35:
Invalid return type (Typing[4110])
  File "nested_refine.php", line 5, characters 30-31:
  Expected `Ti`
  File "nested_refine.php", line 7, characters 33-33:
  But got `C`
